<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.arabiccalligraphy</groupId>
	<artifactId>callig-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>api</name>
	<description>arabic calligraphy api</description>
	<properties>
		<java.version>18</java.version>
		<maven.build.timestamp.format>yyyy-MM-dd'T'HH-mm-ss</maven.build.timestamp.format>
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>18</source>
                </configuration>
            </plugin>
<!--			<plugin>-->
<!--				<groupId>br.com.ingenieux</groupId>-->
<!--				<artifactId>beanstalk-maven-plugin</artifactId>-->
<!--				<version>1.5.0</version>-->
<!--				<configuration>-->
<!--					<applicationName>callig-api</applicationName>-->
<!--					<s3Bucket>elasticbeanstalk-us-east-1-055581772511</s3Bucket>-->
<!--					<s3Key>${project.build.finalName}.jar</s3Key>-->
<!--					&lt;!&ndash; Path of the deployed application: cnamePrefix.us-east-1.elasticbeanstalk.com &ndash;&gt;-->
<!--					<cnamePrefix>${project.artifactId}</cnamePrefix>-->
<!--					<environmentRef>Calligapi-env</environmentRef>-->
<!--					<solutionStack>64bit Amazon Linux 2 v3.2.15 running Corretto 11</solutionStack>-->
<!--					<versionLabel>${maven.build.timestamp}</versionLabel>-->
<!--				</configuration>-->
<!--				<dependencies>-->
<!--					&lt;!&ndash; needed only for the plugin's upload-source-bundle target &ndash;&gt;-->
<!--					<dependency>-->
<!--						<groupId>javax.xml.bind</groupId>-->
<!--						<artifactId>jaxb-api</artifactId>-->
<!--						<version>2.3.1</version>-->
<!--					</dependency>-->
<!--					<dependency>-->
<!--						<groupId>org.glassfish.jaxb</groupId>-->
<!--						<artifactId>jaxb-runtime</artifactId>-->
<!--						<version>2.3.6</version>-->
<!--					</dependency>-->
<!--				</dependencies>-->
<!--			</plugin>-->
        </plugins>
		<finalName>${project.artifactId}-${project.version}-${maven.build.timestamp}</finalName>
	</build>

</project>
